Web projektmunka vak kapcsolatban Todo: Inline css kirorlese kommentek kitorlese Mind az 5 tamanyag kiegészítése Js php python tamsgxag még hiányzik

--- a/css.html
+++ b/css.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title> TryHard - CSS Tutorial</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 <nav>
@@ -80,13 +79,13 @@
     <p>Experiment with different colors and color combinations using this interactive color picker. See how changing
       the color affects the appearance of various HTML elements.</p>
     <div>
-      <input type="color" id="colorPicker" value="#ff0000">
+      <input id="colorPicker" type="color" value="#ff0000">
       <label for="colorPicker">Choose a color</label>
     </div>
     <h3>2. CSS Box Model Demo</h3>
     <p>Visualize the CSS box model and its components (content, padding, border, margin) using this interactive
       demo. Adjust the size and spacing of the box to see how it affects the layout.</p>
-    <!-- TODO embed a box model demo here -->
+    <img src="img/box_model.png" alt="A picture showing the css box model.">
 
     <h3>3. Flexbox Playground</h3>
     <p>Play around with Flexbox properties to create different layouts and arrangements of elements. Drag and drop
@@ -105,18 +104,23 @@
 
     <p>These interactive examples provide a hands-on way to explore CSS concepts and techniques. Click on the links
       to start experimenting!</p>
-    <section id="animation-demo" class="animation-container">
+    <section class="animation-container" id="animation-demo">
       <h3 class="animation-heading">CSS Animation Demonstration</h3>
-      <img src="img/nyul-icon.png" alt="First rabbit fades out." title="First rabbit fades out." onclick="applyAnimation(this, 'fadeOut')">
+      <img alt="First rabbit fades out." onclick="applyAnimation(this, 'fadeOut')" src="img/nyul-icon.png"
+           title="First rabbit fades out.">
       <p>First rabbit fades out.</p>
-      <img src="img/nyul1.png" alt="Second rabbit slides in." title="Second rabbit slides in." onclick="applyAnimation(this, 'slideIn')">
+      <img alt="Second rabbit slides in." onclick="applyAnimation(this, 'slideIn')" src="img/nyul1.png"
+           title="Second rabbit slides in.">
       <p>Second rabbit slides in.</p>
-      <img src="img/nyul2.jfif" alt="Third rabbit rotates." title="Third rabbit rotates." onclick="applyAnimation(this, 'rotate')">
+      <img alt="Third rabbit rotates." onclick="applyAnimation(this, 'rotate')" src="img/nyul2.jfif"
+           title="Third rabbit rotates.">
       <p>Third rabbit rotates.</p>
-      <img src="img/nyul3.jfif" alt="Fourth rabbit scales." title="Fourth rabbit scales." onclick="applyAnimation(this, 'scale')">
+      <img alt="Fourth rabbit scales." onclick="applyAnimation(this, 'scale')" src="img/nyul3.jfif"
+           title="Fourth rabbit scales.">
       <p>Fourth rabbit scales.</p>
-      <img src="img/nyul4.jfif" alt="Fifth rabbit changes color." title="Fifth rabbit changes color." onclick="applyAnimation(this, 'changeColor')">
-      <p>Fifth rabbit changes color.</p>
+      <img alt="Fifth rabbit changes color." onclick="applyAnimation(this, 'changeColor')" src="img/nyul4.jfif"
+           title="Fifth rabbit changes color.">
+      <p>Fifth rabbit picture changes color.</p>
     </section>
 
     <script>
@@ -176,16 +180,16 @@
     <a class="right btn" href="javascript.html">Next &#10095;</a>
   </div>
 </main>
-<footer style="text-align: center;">
-  <section style="width: 80%; background-color: black; margin: auto; padding: 20px; border: 0;">
+<footer>
+  <section>
     <h2>Contact us:</h2>
-    <ul style="list-style-type: none; padding: 0;">
-      <li style="margin-bottom: 10px;"><a href="mailto:meowuwuka@calculus.hu">meowuwuka@calculus.hu</a></li>
-      <li style="margin-bottom: 10px;"><a href="https://www.facebook.com/meowuwuka">facebook.com/meowuwuka</a></li>
-      <li style="margin-bottom: 10px;"><a href="https://www.linkedin.com/in/meowuwuka">linkedin.com/meowuwuka</a></li>
-      <li style="margin-bottom: 10px;"><a href="https://www.meowuwuka.com">meowuwuka.com</a></li>
+    <ul>
+      <li><a href="mailto:meowuwuka@calculus.hu">meowuwuka@calculus.hu</a></li>
+      <li><a href="https://www.facebook.com/meowuwuka">facebook.com/meowuwuka</a></li>
+      <li><a href="https://www.linkedin.com/in/meowuwuka">linkedin.com/meowuwuka</a></li>
+      <li><a href="https://www.meowuwuka.com">meowuwuka.com</a></li>
     </ul>
-    <p>&copy; 2024 TryHard33. All rights reserved.</p>
+    <p>&copy; 2024 - 2024 TryHard33. All rights reserved.</p>
   </section>
 </footer>
 </body>
