--- a/feedback.html
+++ b/feedback.html
@@ -35,7 +35,7 @@
   <h1>Feedback</h1>
 </header>
 
-<section>
+<section class="white feedback-form">
   <!-- Your feedback form goes here -->
   <form action="#" class="background-form" method="POST"><!--includes/submit_feedback.inc.php-->
     <h2>Rate Us (1-5):</h2>
@@ -59,16 +59,16 @@
   </form>
 </section>
 
-<footer style="text-align: center;">
-  <section style="width: 80%; background-color: black; margin: auto; padding: 20px; border: 0;">
+<footer>
+  <section>
     <h2>Contact us:</h2>
-    <ul style="list-style-type: none; padding: 0;">
-      <li style="margin-bottom: 10px;"><a href="mailto:meowuwuka@calculus.hu">meowuwuka@calculus.hu</a></li>
-      <li style="margin-bottom: 10px;"><a href="https://www.facebook.com/meowuwuka">facebook.com/meowuwuka</a></li>
-      <li style="margin-bottom: 10px;"><a href="https://www.linkedin.com/in/meowuwuka">linkedin.com/meowuwuka</a></li>
-      <li style="margin-bottom: 10px;"><a href="https://www.meowuwuka.com">meowuwuka.com</a></li>
+    <ul>
+      <li><a href="mailto:meowuwuka@calculus.hu">meowuwuka@calculus.hu</a></li>
+      <li><a href="https://www.facebook.com/meowuwuka">facebook.com/meowuwuka</a></li>
+      <li><a href="https://www.linkedin.com/in/meowuwuka">linkedin.com/meowuwuka</a></li>
+      <li><a href="https://www.meowuwuka.com">meowuwuka.com</a></li>
     </ul>
-    <p>&copy; 2024 TryHard33. All rights reserved.</p>
+    <p>&copy; 2024 - 2024 TryHard33. All rights reserved.</p>
   </section>
 </footer>
 </body>
