--- a/admin.html
+++ b/admin.html
@@ -30,11 +30,11 @@
   <a class="nav " href="python.html">PYTHON</a>
 </nav>
 <main>
-  <form action="" method="post" style="margin: 30px"><!--admin.html-->
+  <form action="" class="white background-form margin-30-px" method="post"><!--admin.html-->
     <fieldset>
       <legend>Enter the super confidential secret admin password</legend>
       <label for="admin_password">Admin password:</label>
-      <input id="admin_password" name="admin_password" placeholder="Password" required style="width: 300px"
+      <input id="admin_password" name="admin_password" placeholder="Password" required
              type="password">
       <button type="submit">Enter</button>
     </fieldset>
@@ -43,16 +43,16 @@
   <section>
   </section>
 </main>
-<footer style="text-align: center;">
-  <section style="width: 80%; background-color: black; margin: auto; padding: 20px; border: 0;">
+<footer>
+  <section>
     <h2>Contact us:</h2>
-    <ul style="list-style-type: none; padding: 0;">
-      <li style="margin-bottom: 10px;"><a href="mailto:meowuwuka@calculus.hu">meowuwuka@calculus.hu</a></li>
-      <li style="margin-bottom: 10px;"><a href="https://www.facebook.com/meowuwuka">facebook.com/meowuwuka</a></li>
-      <li style="margin-bottom: 10px;"><a href="https://www.linkedin.com/in/meowuwuka">linkedin.com/meowuwuka</a></li>
-      <li style="margin-bottom: 10px;"><a href="https://www.meowuwuka.com">meowuwuka.com</a></li>
+    <ul>
+      <li><a href="mailto:meowuwuka@calculus.hu">meowuwuka@calculus.hu</a></li>
+      <li><a href="https://www.facebook.com/meowuwuka">facebook.com/meowuwuka</a></li>
+      <li><a href="https://www.linkedin.com/in/meowuwuka">linkedin.com/meowuwuka</a></li>
+      <li><a href="https://www.meowuwuka.com">meowuwuka.com</a></li>
     </ul>
-    <p>&copy; 2024 TryHard33. All rights reserved.</p>
+    <p>&copy; 2024 - 2024 TryHard33. All rights reserved.</p>
   </section>
 </footer>
 </body>
