--- a/javascript.html
+++ b/javascript.html
@@ -36,16 +36,16 @@
   <a class="left btn" href="css.html">&#10094; Previous</a>
   <a class="right btn" href="php.html">Next &#10095;</a>
 </div>
-<footer style="text-align: center;">
-  <section style="width: 80%; background-color: black; margin: auto; padding: 20px; border: 0;">
+<footer>
+  <section>
     <h2>Contact us:</h2>
-    <ul style="list-style-type: none; padding: 0;">
-      <li style="margin-bottom: 10px;"><a href="mailto:meowuwuka@calculus.hu">meowuwuka@calculus.hu</a></li>
-      <li style="margin-bottom: 10px;"><a href="https://www.facebook.com/meowuwuka">facebook.com/meowuwuka</a></li>
-      <li style="margin-bottom: 10px;"><a href="https://www.linkedin.com/in/meowuwuka">linkedin.com/meowuwuka</a></li>
-      <li style="margin-bottom: 10px;"><a href="https://www.meowuwuka.com">meowuwuka.com</a></li>
+    <ul>
+      <li><a href="mailto:meowuwuka@calculus.hu">meowuwuka@calculus.hu</a></li>
+      <li><a href="https://www.facebook.com/meowuwuka">facebook.com/meowuwuka</a></li>
+      <li><a href="https://www.linkedin.com/in/meowuwuka">linkedin.com/meowuwuka</a></li>
+      <li><a href="https://www.meowuwuka.com">meowuwuka.com</a></li>
     </ul>
-    <p>&copy; 2024 TryHard33. All rights reserved.</p>
+    <p>&copy; 2024 - 2024 TryHard33. All rights reserved.</p>
   </section>
 </footer>
 </body>
