--- a/profile&progress.html
+++ b/profile&progress.html
@@ -1,11 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title> TryHard - Profile and Progress</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/progress.css">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 <nav>
@@ -32,54 +30,71 @@
   <a class="nav " href="python.html">PYTHON</a>
 </nav>
 <main>
-  <h2>Profile Information</h2>
-  <p>Welcome, [Username]!</p>
-  <p>Email: [User Email]</p>
+  <section class="interests white background-form">
+    <h1>Welcome, Visitor!</h1><!--TODO mf2 change to the actual name of the user when logged in-->
+    <h2>Profile Information</h2>
+    <h2>Email:</h2>
+    <p> It seems like you're not logged in</p><!--TODO mf2 change to the actual email of the user when logged in-->
+    <fieldset>
+    <legend>Choose Your Interests:</legend>
+    <label><input name="interests" type="checkbox" value="frontend">Frontend Development</label>
+    <label><input name="interests" type="checkbox" value="backend">Backend Development</label>
+    <label><input name="interests" type="checkbox" value="devops">DevOps</label>
+    <label><input name="interests" type="checkbox" value="fullstackdev">Full Stack Development</label>
+
+    <label><input name="interests" type="checkbox" value="html">HTML "programming"</label>
+    <label><input name="interests" type="checkbox" value="css">CSS Tips and Tricks</label>
+    <label><input name="interests" type="checkbox" value="javascript">JavaScript Frameworks</label>
+    <label><input name="interests" type="checkbox" value="php">PHP Database Support</label>
+    <label><input name="interests" type="checkbox" value="python">Python Programming</label>
+    <label for="submit"><input id="submit" type="submit" value="Save"></label>
+    </fieldset>
+  </section>
 
   <section class="progress-tracker">
     <h2>Your progress in lessons:</h2>
     <div class="progress-item">
       <div class="progress-label">HTML</div>
       <div class="progress-bar">
-        <div class="progress-bar-inner" style="width: 80%;"></div>
+        <div class="progress-bar-inner bar--higher"></div>
       </div>
     </div>
     <div class="progress-item">
       <div class="progress-label">CSS</div>
       <div class="progress-bar">
-        <div class="progress-bar-inner" style="width: 60%;"></div>
+        <div class="progress-bar-inner bar--high"></div>
       </div>
     </div>
     <div class="progress-item">
       <div class="progress-label">JavaScript</div>
       <div class="progress-bar">
-        <div class="progress-bar-inner" style="width: 40%;"></div>
+        <div class="progress-bar-inner  bar--medium"></div>
       </div>
     </div>
     <div class="progress-item">
       <div class="progress-label">PHP</div>
       <div class="progress-bar">
-        <div class="progress-bar-inner" style="width: 20%;"></div>
+        <div class="progress-bar-inner bar--low"></div>
       </div>
     </div>
     <div class="progress-item">
       <div class="progress-label">Python</div>
       <div class="progress-bar">
-        <div class="progress-bar-inner" style="width: 10%;"></div>
+        <div class="progress-bar-inner bar--lower"></div>
       </div>
     </div>
   </section>
 </main>
-<footer style="text-align: center;">
-  <section style="width: 80%; background-color: black; margin: auto; padding: 20px; border: 0;">
+<footer>
+  <section>
     <h2>Contact us:</h2>
-    <ul style="list-style-type: none; padding: 0;">
-      <li style="margin-bottom: 10px;"><a href="mailto:meowuwuka@calculus.hu">meowuwuka@calculus.hu</a></li>
-      <li style="margin-bottom: 10px;"><a href="https://www.facebook.com/meowuwuka">facebook.com/meowuwuka</a></li>
-      <li style="margin-bottom: 10px;"><a href="https://www.linkedin.com/in/meowuwuka">linkedin.com/meowuwuka</a></li>
-      <li style="margin-bottom: 10px;"><a href="https://www.meowuwuka.com">meowuwuka.com</a></li>
+    <ul>
+      <li><a href="mailto:meowuwuka@calculus.hu">meowuwuka@calculus.hu</a></li>
+      <li><a href="https://www.facebook.com/meowuwuka">facebook.com/meowuwuka</a></li>
+      <li><a href="https://www.linkedin.com/in/meowuwuka">linkedin.com/meowuwuka</a></li>
+      <li><a href="https://www.meowuwuka.com">meowuwuka.com</a></li>
     </ul>
-    <p>&copy; 2024 TryHard33. All rights reserved.</p>
+    <p>&copy; 2024 - 2024 TryHard33. All rights reserved.</p>
   </section>
 </footer>
 </body>
