--- a/css.html
+++ b/css.html
@@ -86,6 +86,7 @@
     <p>Visualize the CSS box model and its components (content, padding, border, margin) using this interactive
       demo. Adjust the size and spacing of the box to see how it affects the layout.</p>
     <img src="img/box_model.png" alt="A picture showing the css box model.">
+    <!-- TODO embed a box model demo here -->
 
     <h3>3. Flexbox Playground</h3>
     <p>Play around with Flexbox properties to create different layouts and arrangements of elements. Drag and drop
