--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </header>
 <main>
   <img alt="image of a person learning html js and php" src="img/person_learns_programming.jpg">
-  <section class="white seventy-five-percent">
+  <section class="white seventy-five-percent-width">
     <!-- main content goes here -->
     <h2>Welcome to the TryHard33 website</h2>
     <p>An interactive website where you can learn HTML, CSS, Javascript, PHP and Python</p>
