--- a/javascript.html
+++ b/javascript.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title> TryHard - Javascript Tutorial</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 <nav>
@@ -30,6 +29,141 @@
   <a class="nav " href="php.html">PHP</a>
   <a class="nav " href="python.html">PYTHON</a>
 </nav>
+<main>
+  <nav>
+    <h1 class="choose-a-topic-to-learn">Quick links:</h1>
+    <a class="nav " href="#introduction">Introduction</a>
+    <a class="nav " href="#variables">Variables and Data Types</a>
+    <a class="nav " href="#operators">Operators and Expressions</a>
+    <a class="nav " href="#control-flow">Control Flow</a>
+    <a class="nav " href="#functions">Functions</a>
+    <a class="nav " href="#objects-arrays">Objects and Arrays</a>
+    <a class="nav " href="#dom-manipulation">DOM Manipulation</a>
+    <a class="nav " href="#event-handling">Event Handling</a>
+  </nav>
+  <section class="white seventy-five-percent-width" id="introduction">
+    <h2>Introduction to JavaScript</h2>
+    <p>JavaScript is a high-level programming language that is widely used for creating interactive web pages. It allows
+      you to add dynamic behavior to your websites, making them more engaging and user-friendly.</p>
+    <p>In this tutorial, you will learn the basics of JavaScript, including:</p>
+    <ul>
+      <li>Variables and Data Types</li>
+      <li>Operators and Expressions</li>
+      <li>Control Flow (if-else statements, loops)</li>
+      <li>Functions</li>
+      <li>Objects and Arrays</li>
+      <li>DOM Manipulation</li>
+      <li>Event Handling</li>
+    </ul>
+  </section>
+
+  <section class="white seventy-five-percent-width" id="variables">
+    <h2>Variables and Data Types</h2>
+    <p>In JavaScript, variables are used to store data values. There are several data types in JavaScript:</p>
+    <ul>
+      <li>Number: Represents numeric values.</li>
+      <li>String: Represents text values.</li>
+      <li>Boolean: Represents true or false values.</li>
+      <li>Object: Represents a collection of key-value pairs.</li>
+      <li>Array: Represents a list of values.</li>
+      <li>Undefined: Represents a variable that has been declared but not assigned a value.</li>
+      <li>Null: Represents the absence of any value.</li>
+    </ul>
+    <p>Example:</p>
+    <pre><code>
+// Declaring variables
+var num = 10;
+var name = "John";
+var isStudent = true;
+var person = { firstName: "John", lastName: "Doe" };
+var colors = ["Red", "Green", "Blue"];
+var x; // Declaring a variable without assigning a value (results in undefined)
+var y = null; // Assigning a null value to a variable
+    </code></pre>
+  </section>
+
+  <section class="white seventy-five-percent-width" id="operators">
+    <h2>Operators and Expressions</h2>
+    <article>
+      <p>In JavaScript, operators are symbols that perform operations on operands. They can be classified into different categories:</p>
+      <ul>
+        <li>Arithmetic operators (+, -, *, /, %)</li>
+        <li>Assignment operators (=, +=, -=, *=, /=, %=)</li>
+        <li>Comparison operators (==, ===, !=, !==, >, <, >=, <=)</li>
+        <li>Logical operators (&&, ||, !)</li>
+        <li>Bitwise operators (&, |, ^, ~, <<, >>, >>>)</li>
+        <li>Ternary operator (condition ? expr1 : expr2)</li>
+        <li>Unary operators (++x, --x, +x, -x, !x)</li>
+      </ul>
+      <p>Expressions are combinations of values, variables, and operators that are evaluated to produce a result. For example:</p>
+      <pre><code>
+var x = 10;
+var y = 20;
+var z = x + y; // z is assigned the value 30
+        </code></pre>
+    </article>
+  </section>
+
+  <section class="white seventy-five-percent-width" id="control-flow">
+    <h2>Control Flow</h2>
+    <article>
+      <p>Control flow refers to the order in which statements are executed in a program. JavaScript provides several control flow statements to control the execution flow:</p>
+      <ul>
+        <li>if statement: Executes a block of code if a specified condition is true.</li>
+        <li>if...else statement: Executes a block of code if a condition is true, and another block of code if the condition is false.</li>
+        <li>else if statement: Allows you to specify a new condition to test if the first condition is false.</li>
+        <li>switch statement: Evaluates an expression and executes a block of code depending on the value of the expression.</li>
+        <li>for loop: Executes a block of code a specified number of times.</li>
+        <li>while loop: Executes a block of code as long as a specified condition is true.</li>
+        <li>do...while loop: Executes a block of code once, and then repeats the loop as long as a specified condition is true.</li>
+        <li>break statement: Terminates the current loop, switch, or label statement.</li>
+        <li>continue statement: Jumps to the next iteration of a loop.</li>
+      </ul>
+    </article>
+  </section>
+
+  <section class="white seventy-five-percent-width" id="functions">
+    <h2>Functions</h2>
+    <article>
+      <p>A function is a block of reusable code that performs a specific task. Functions allow you to organize your code into logical units, making it easier to understand, debug, and maintain. In JavaScript, you can define functions using the function keyword:</p>
+      <pre><code>
+function functionName(parameters) {
+    // Function body
+    // Code to be executed
+    return value; // Optional return statement
+}
+        </code></pre>
+      <p>Functions can take parameters (input values) and return a value as output. They can also be assigned to variables, passed as arguments to other functions, and returned from other functions.</p>
+    </article>
+  </section>
+
+  <section class="white seventy-five-percent-width" id="objects-arrays">
+    <h2>Objects and Arrays</h2>
+    <article>
+      <p>Objects and arrays are two fundamental data structures in JavaScript:</p>
+      <h3>Objects:</h3>
+      <p>An object is a collection of key-value pairs. Each key is a unique identifier for a property, and each value is the data associated with that property. Objects are used to represent complex data structures and are central to JavaScript programming.</p>
+      <h3>Arrays:</h3>
+      <p>An array is an ordered collection of values. Each value in an array is called an element, and each element is associated with an index starting from 0. Arrays are used to store lists of data, such as a list of numbers or a list of objects.</p>
+    </article>
+  </section>
+
+  <section class="white seventy-five-percent-width" id="dom-manipulation">
+    <h2>DOM Manipulation</h2>
+    <article>
+      <p>The Document Object Model (DOM) is a programming interface for web documents. It represents the structure of HTML and XML documents as a tree-like structure, where each node represents an element in the document.</p>
+      <p>DOM manipulation refers to the process of programmatically interacting with the DOM tree to dynamically update the content, structure, and style of web pages. JavaScript provides methods and properties for accessing, creating, modifying, and deleting elements in the DOM.</p>
+    </article>
+  </section>
+
+  <section class="white seventy-five-percent-width" id="event-handling">
+    <h2>Event Handling</h2>
+    <article>
+      <p>Event handling is the process of responding to user interactions with a web page, such as clicks, mouse movements, keyboard input, and form submissions. In JavaScript, you can handle events by attaching event listeners to HTML elements and specifying the code to execute when the event occurs.</p>
+      <p>Common events in web development include click, mouseover, mouseout, keydown, keyup, submit, and many more. By handling events, you can create interactive and dynamic web applications that respond to user actions in real-time.</p>
+    </article>
+  </section>
+</main>
 <div>
   <a class="left btn" href="index.html">&#10094;&#10094; Home</a>
   <br>
