php.html python.html content added

--- a/css.html
+++ b/css.html
@@ -22,7 +22,7 @@
 
 </nav>
 <nav>
-  <h1 class="choose-a-topic-to-learn">Choose a topic to learn:</h1>
+  <h1 class="choose-a-topic-to-learn">Choose a lesson to learn:</h1>
   <a class="nav " href="html.html">HTML</a>
   <a class="nav current_page" href="css.html">CSS</a>
   <a class="nav " href="javascript.html">JAVASCRIPT</a>
@@ -41,6 +41,7 @@
   </section>
 </header>
 <main class="left">
+  <h2>CSS tutorial</h2>
   <section id="introduction">
     <h2>Introduction to CSS</h2>
     <p>CSS, which stands for Cascading Style Sheets, is a language used for describing the presentation of a
