--- a/html.html
+++ b/html.html
@@ -23,13 +23,14 @@
 
 </nav>
 <nav>
-  <h1 class="choose-a-topic-to-learn">Choose a topic to learn:</h1>
+  <h1 class="choose-a-topic-to-learn">Choose a lesson to learn:</h1>
   <a class="nav current_page" href="html.html">HTML</a>
   <a class="nav " href="css.html">CSS</a>
   <a class="nav " href="javascript.html">JAVASCRIPT</a>
   <a class="nav " href="php.html">PHP</a>
   <a class="nav " href="python.html">PYTHON</a>
 </nav>
+
 <header class="yellow-font gray-background">
   <h1 class="yellow-font">HTML Tutorial</h1>
   <section class="html-css-nav">
@@ -43,6 +44,7 @@
   </section>
 </header>
 <main class="lightgreen-background">
+  <h2>HTML tutorial</h2>
   <section id="introduction">
     <div class="html-intro">
       <hr>
