--- a/javascript.html
+++ b/javascript.html
@@ -22,7 +22,7 @@
 
 </nav>
 <nav>
-  <h1 class="choose-a-topic-to-learn">Choose a topic to learn:</h1>
+  <h1 class="choose-a-topic-to-learn">Choose a lesson to learn:</h1>
   <a class="nav " href="html.html">HTML</a>
   <a class="nav " href="css.html">CSS</a>
   <a class="nav current_page" href="javascript.html">JAVASCRIPT</a>
@@ -30,8 +30,9 @@
   <a class="nav " href="python.html">PYTHON</a>
 </nav>
 <main>
+  <h2>Javascript tutorial</h2>
   <nav>
-    <h1 class="choose-a-topic-to-learn">Quick links:</h1>
+    <h1 class="choose-a-topic-to-learn">Quick links to the topics:</h1>
     <a class="nav " href="#introduction">Introduction</a>
     <a class="nav " href="#variables">Variables and Data Types</a>
     <a class="nav " href="#operators">Operators and Expressions</a>
