--- a/php.html
+++ b/php.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title> TryHard - PHP Tutorial</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
 <nav>
@@ -23,13 +22,111 @@
 
 </nav>
 <nav>
-  <h1 class="choose-a-topic-to-learn">Choose a topic to learn:</h1>
+  <h1 class="choose-a-topic-to-learn">Choose a lesson to learn:</h1>
   <a class="nav " href="html.html">HTML</a>
   <a class="nav " href="css.html">CSS</a>
   <a class="nav " href="javascript.html">JAVASCRIPT</a>
   <a class="nav current_page" href="php.html">PHP</a>
   <a class="nav " href="python.html">PYTHON</a>
 </nav>
+<main class="lesson-container white left-align">
+  <h2>PHP tutorial</h2>
+  <article class="lesson-content">
+    <section class="lesson-content">
+    <h2>PHP Basics</h2>
+      <h3>Introduction</h3>
+      <p>PHP is a server-side scripting language used for web development. It is widely used for creating dynamic web
+        pages and interacting with databases.</p>
+    </section>
+    <section>
+      <h3>Example 1: Hello World</h3>
+      <div class="php-code">
+      <pre class="left-align">
+      &lt;?php
+      // PHP code to display "Hello, World!"
+      echo "Hello, World!";
+      ?></pre>
+      </div>
+      <h4>Output:</h4>
+      <div class="output">
+      <pre>
+      Hello, World!
+      </pre>
+      </div>
+    </section>
+  <section>
+
+    <h3>Example 2: Variables and Data Types</h3>
+    <div class="php-code">
+      <pre class="left-align">
+
+      &lt;?php
+      // PHP code to declare variables and display their values
+      $name = "John";
+      $age = 25;
+      echo "Name: " . $name . "&lt;br&gt;";
+      echo "Age: " . $age;
+      ?>
+      </pre>
+    </div>
+    <h4>Output:</h4>
+    <div class="output">
+      <pre class="left-align">
+      Name: John
+      Age: 25
+      </pre>
+    </div>
+  </section>
+  <section>
+    <h3>Example 3: Conditional Statements</h3>
+    <div class="php-code">
+      <pre class="left-align">
+
+      &lt;?php
+      // PHP code to demonstrate conditional statements
+      $num = 10;
+      if ($num > 0) {
+      echo "Positive number";
+      } elseif ($num < 0) {
+      echo "Negative number";
+      } else {
+      echo "Zero";
+      }
+      ?>
+      </pre>
+    </div>
+    <h4>Output:</h4>
+    <div class="output">
+    <pre class="left-align">
+      &lt;p&gt;Positive number&lt;/p&gt;
+    </pre>
+    </div>
+  </section>
+  <section>
+    <h3>Example 4: Loops</h3>
+    <div class="php-code">
+    <pre class="left-align">
+      &lt;?php
+      // PHP code to demonstrate loops
+      for ($i = 1; $i &lt;= 5; $i++) {
+          echo $i . "&lt;br&gt;";
+      }
+      ?&gt;
+    </pre>
+    </div>
+    <h4>Output:</h4>
+    <div class="output">
+    <pre class="left-align">
+      &lt;p&gt;1&lt;/p&gt;
+      &lt;p&gt;2&lt;/p&gt;
+      &lt;p&gt;3&lt;/p&gt;
+      &lt;p&gt;4&lt;/p&gt;
+      &lt;p&gt;5&lt;/p&gt;
+    </pre>
+    </div>
+  </section>
+  </article>
+</main>
 <div>
   <a class="left btn" href="index.html">&#10094;&#10094; Home</a>
   <br>
