--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 </nav>
 <nav>
-  <h1 class="choose-a-topic-to-learn">Choose a topic to learn:</h1>
+  <h1 class="choose-a-topic-to-learn">Choose a lesson to learn:</h1>
   <a class="nav " href="html.html">HTML</a>
   <a class="nav " href="css.html">CSS</a>
   <a class="nav " href="javascript.html">JAVASCRIPT</a>
