--- a/python.html
+++ b/python.html
@@ -23,13 +23,62 @@
 
 </nav>
 <nav>
-  <h1 class="choose-a-topic-to-learn">Choose a topic to learn:</h1>
+  <h1 class="choose-a-topic-to-learn">Choose a lesson to learn:</h1>
   <a class="nav " href="html.html">HTML</a>
   <a class="nav " href="css.html">CSS</a>
   <a class="nav " href="javascript.html">JAVASCRIPT</a>
   <a class="nav " href="php.html">PHP</a>
   <a class="nav current_page" href="python.html">PYTHON</a>
 </nav>
+<main class="lesson-container white left-align">
+  <section>
+    <h2>Python tutorial</h2>
+      <p>Python is a high-level, interpreted programming language known for its simplicity and readability. It is widely used for various purposes, including web development, data analysis, artificial intelligence, and scientific computing.</p>
+      <p>In this tutorial, you will learn the fundamentals of Python programming, including:</p>
+    <ul>
+      <li><a href="#variables-data-types">Variables and Data Types</a></li>
+      <li><a href="#operators-expressions">Operators and Expressions</a></li>
+      <li><a href="#control-flow">Control Flow</a> (if-else statements, loops)</li>
+      <li><a href="#functions">Functions</a></li>
+      <li><a href="#data-structures">Data Structures</a> (lists, tuples, dictionaries)</li>
+      <li><a href="#file-handling">File Handling</a></li>
+      <li><a href="#error-handling">Error Handling</a></li>
+    </ul>
+  </section>
+  <section id="variables-data-types">
+    <h3>Variables and Data Types</h3>
+    <!--TODO Content for Variables and Data Types section -->
+  </section>
+  <section id="operators-expressions">
+    <h3>Operators and Expressions</h3>
+    <!--TODO Content for Operators and Expressions section -->
+  </section>
+
+  <section id="control-flow">
+    <h3>Control Flow</h3>
+    <!--TODO Content for Control Flow section -->
+  </section>
+
+  <section id="functions">
+    <h3>Functions</h3>
+    <!--TODO Content for Functions section -->
+  </section>
+
+  <section id="data-structures">
+    <h3>Data Structures</h3>
+    <!--TODO Content for Data Structures section -->
+  </section>
+
+  <section id="file-handling">
+    <h3>File Handling</h3>
+    <!--TODO Content for File Handling section -->
+  </section>
+
+  <section id="error-handling">
+    <h3>Error Handling</h3>
+    <!--TODO Content for Error Handling section -->
+  </section>
+  </main>
 <div>
   <a class="left btn" href="index.html">&#10094;&#10094; Home</a>
   <br>
