--- a/css.html
+++ b/css.html
@@ -40,7 +40,7 @@
     </ul>
   </section>
 </header>
-<main class="left">
+<main class="lesson-container white left-align">
   <h2>CSS tutorial</h2>
   <section id="introduction">
     <h2>Introduction to CSS</h2>
