--- a/html.html
+++ b/html.html
@@ -43,7 +43,7 @@
     </ul>
   </section>
 </header>
-<main class="lightgreen-background">
+<main class="lesson-container white left-align">
   <h2>HTML tutorial</h2>
   <section id="introduction">
     <div class="html-intro">
