--- a/javascript.html
+++ b/javascript.html
@@ -29,7 +29,7 @@
   <a class="nav " href="php.html">PHP</a>
   <a class="nav " href="python.html">PYTHON</a>
 </nav>
-<main>
+<main class="lesson-container white left-align">
   <h2>Javascript tutorial</h2>
   <nav>
     <h1 class="choose-a-topic-to-learn">Quick links to the topics:</h1>
